@@ -5,6 +5,9 @@ weewx change history
 
 Fixed bug that can crash RESTful threads if there is missing rain data.
 
+Sqlite connections can now explicitly specify a timeout and 
+isolation_level.
+
 
 2.6.1 02/08/14
 
